--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis.configuration.map-underscore-to-camel-case=true
 
+spring.flyway.baselineVersion=0.0.0
+spring.flyway.baseline-on-migrate=true
+
 server.port=8081
 security.user.name=mori
 security.user.password=mori
